<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TimeLogActivity"
    tools:showIn="@layout/activity_edit_time_log">

    <EditText
        android:id="@+id/textTimeLogDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinnerProjects"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/timeLogEditProjectSelectPlaceholder"
        app:layout_constraintTop_toBottomOf="@+id/textTimeLogTitle" />

    <Spinner
        android:id="@+id/spinnerProjects"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timeLogEditProjectSelectPlaceholder"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textTimeLogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Title"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinnerProjects"
        app:layout_constraintStart_toStartOf="@+id/timeLogEditProjectSelectPlaceholder"
        app:layout_constraintTop_toBottomOf="@+id/spinnerProjects" />

    <TextView
        android:id="@+id/timeLogEditProjectSelectPlaceholder"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:text="Project: "
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp" />

</android.support.constraint.ConstraintLayout>