<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timeLogs"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="Time Logs" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="Projects" />
    </group>

</menu>
